--- a/_includes/json-editor.html
+++ b/_includes/json-editor.html
@@ -38,4 +38,5 @@
     <script src="https://cdn.jsdelivr.net/npm/@json-editor/json-editor@latest/dist/jsoneditor.js"></script>
     <script src="assets/js/schema.js"></script>
     <script src="assets/js/json-editor.js"></script>
+    <script src="assets/js/file-upload-download.js"></script>
 </body>
