--- a/_includes/json-editor.html
+++ b/_includes/json-editor.html
@@ -19,7 +19,7 @@
 <div>
     <form method="get">
         <input id="input" type="hidden" name="json">
-        <div id='editor-container'></div>
+        <div id="editor-container"></div>
         <button id="submit" class="btn btn-primary" width="100" type="submit">
             <i class="fa-solid fa-arrow-right"></i>
             Submit
