--- a/_sass/json-editor/file-buttons.scss
+++ b/_sass/json-editor/file-buttons.scss
@@ -16,7 +16,7 @@ button {
     /* Add click button cursor */
     cursor: pointer;
 
-    border: 1px solid gray;
+    border: 1px solid ButtonBorder;
     border-radius: 4px;
     padding: 2px 6px;
 }
