--- a/_sass/json-editor/file-buttons.scss
+++ b/_sass/json-editor/file-buttons.scss
@@ -19,4 +19,5 @@ button {
     border: 1px solid ButtonBorder;
     border-radius: 4px;
     padding: 2px 6px;
+    background-color: ButtonFace;
 }
